code refactor - new wrappers, new exception response body, reduced @Autowired constructors, removed BackupService, dtos to records