@@ -1,47 +1,32 @@
 package com.finances.service;
 
-import com.finances.backup.Backup;
-import com.finances.dto.backup.YearCategoryBackupDto;
-import com.finances.dto.base.YearCategoryDto;
 import com.finances.entity.Category;
 import com.finances.entity.Year;
 import com.finances.entity.YearCategory;
 import com.finances.exception.notfound.CategoryNotFoundException;
+import com.finances.exception.notfound.NotFoundException;
 import com.finances.exception.notfound.YearCategoryNotFoundException;
 import com.finances.exception.notfound.YearNotFoundException;
 import com.finances.repository.YearCategoryRepository;
 import com.finances.request.AddCategoryToYearRequest;
 import com.finances.request.AddNewCategoryToYearRequest;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 @Service
-public class YearCategoryService implements Backup<YearCategoryBackupDto> {
+@RequiredArgsConstructor
+public class YearCategoryService {
 
     private final YearCategoryRepository yearCategoryRepository;
     private final CategoryService categoryService;
     private final YearService yearService;
 
-    @Autowired
-    public YearCategoryService(
-            YearCategoryRepository yearCategoryRepository,
-            CategoryService categoryService,
-            YearService yearService
-    ) {
-        this.yearCategoryRepository = yearCategoryRepository;
-        this.categoryService = categoryService;
-        this.yearService = yearService;
-    }
-
-    public List<YearCategoryDto> findAllYearCategories() {
-        return StreamSupport.stream(yearCategoryRepository.findAll().spliterator(), false)
-                .map(YearCategoryDto::fromDao)
-                .collect(Collectors.toList());
+    public List<YearCategory> findAllYearCategories() {
+        return StreamSupport.stream(yearCategoryRepository.findAll().spliterator(), false).toList();
     }
 
     public Optional<YearCategory> findOptionalYearCategoryByCategoryAndYear(Category category, Year year) {
@@ -67,23 +52,18 @@ public class YearCategoryService implements Backup<YearCategoryBackupDto> {
         } else return null;
     }
 
-    public List<YearCategoryDto> findByYearId(Long yearId) throws YearNotFoundException {
+    public List<YearCategory> findByYearId(Long yearId) throws NotFoundException {
         Year year = yearService.findYearById(yearId);
 
-        return yearCategoryRepository
-                .findByYear(year)
-                .stream()
-                .map(YearCategoryDto::fromDao)
-                .collect(Collectors.toList());
+        return yearCategoryRepository.findByYear(year);
     }
 
-    public YearCategory findByYearCategoryId(Long yearCategoryId) throws YearCategoryNotFoundException {
+    public YearCategory findByYearCategoryId(Long yearCategoryId) throws NotFoundException {
         return yearCategoryRepository.findById(yearCategoryId)
                 .orElseThrow(() -> new YearCategoryNotFoundException(yearCategoryId));
     }
 
-    public YearCategory createCategoryAndAddToYear(AddNewCategoryToYearRequest request)
-            throws YearNotFoundException, CategoryNotFoundException {
+    public YearCategory createCategoryAndAddToYear(AddNewCategoryToYearRequest request) throws NotFoundException {
         Optional<Category> optionalCategory = categoryService.getOptionalCategoryTypeByName(request.getName());
 
         Category category =
@@ -92,13 +72,7 @@ public class YearCategoryService implements Backup<YearCategoryBackupDto> {
                 );
 
         Year year = yearService.findYearByYearNumber(request.getYearNumber());
-        return saveNewYearCategoryIfNotExist(year.getId(), category.getId());
-    }
 
-    @Override
-    public List<YearCategoryBackupDto> getBackup() {
-        return StreamSupport.stream(yearCategoryRepository.findAll().spliterator(), false)
-                .map(YearCategoryBackupDto::fromDao)
-                .collect(Collectors.toList());
+        return saveNewYearCategoryIfNotExist(year.getId(), category.getId());
     }
 }
